[section-change] Prevent the crumbs from overflowing

--- a/src/components/breadcrumbs/breadcrumbs.css
+++ b/src/components/breadcrumbs/breadcrumbs.css
@@ -21,3 +21,9 @@
     background-color: orange;
     color: #FFF;
 }
+
+.crumb-value {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
